Bug fixes/fb (#104)
* GH-101 :: remove overflow:hidden ro prevent page builder personalization dialog from being cut off

* GH-102 :: remove trailing slash from GetBaseURL

* GH-102 :: apply same change to language-specific variants

* GH-102 :: remove unnecessary string interpolation

--- a/src/TrainingGuides.Web/scss/_section.scss
+++ b/src/TrainingGuides.Web/scss/_section.scss
@@ -8,7 +8,6 @@
     
     &.default {
         padding: 2rem 0;
-        overflow: hidden;
     }
     
     @media (min-width: 992px) {
